# ConfigTool

./: CMakeLists.txt
include/: IniConfig.h  IniExceptions.h  IniParser.h  IniValidator.h  JsonParser.h
src/: IniConfig.cpp  IniParser.cpp  IniValidator.cpp  JsonParser.cpp  main.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_include.cpp  test_json.cpp  test_types.cpp  test_validation.cpp
